# pql-webapp

./: .gitignore  LICENSE  pyproject.toml  readme.md
docs/: 3d_visualization_plan.md  control_semantics_and_feature_plan.md  raspberry_pi_setup_tutorial.md
docs/ui_redesign/: implementation_plan.md  task.md  walkthrough.md
motion/fixed/: bound.csv  crawl.csv  pace.csv  trot.csv
pql-a00_description/: CMakeLists.txt  package.xml
pql-a00_description/launch/: robot_description.launch.py
pql-a00_description/meshes/: PQL-LD00-FL_v1_1.stl  PQL-LD00-FR_v1_1.stl  PQL-LD00-RL_v1_1.stl  PQL-LD00-RR_v1_1.stl  PQL01-LU00-A1-FL_v1_1.stl  PQL01-LU00-A1-FR_v1_1.stl  PQL01-LU00-A1-RL_v1_1.stl  PQL01-LU00-A1-RR_v1_2.stl
pql-a00_description/urdf/: materials.xacro  pql-a00.trans  pql-a00.xacro
pql-lg00-a1_description/: CMakeLists.txt  package.xml
pql-lg00-a1_description/launch/: robot_description.launch.py
pql-lg00-a1_description/meshes/: PQL01-LU00-A1_v14_1.stl  leg_down_assy_v7_1.stl
pql-lg00-a1_description/urdf/: materials.xacro  pql-lg00-a1.trans  pql-lg00-a1.xacro
scripts/: detect_windows_ports.py  regen_motions.py  run_windows.ps1  smooth_motions.py
src/highend_server/: __init__.py  __main__.py  config.py  main.py
src/highend_server/api/: dependencies.py  routes.py  websocket_manager.py
src/highend_server/application/: control_service.py  (+1 more)
tests/: test_frames.py  test_joint_preview.py  test_models.py  test_serial_gateway.py
web-vue/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web-vue/src/: App.vue  main.ts  styles.css
(+20 files in other folders)
